Closed Bug 1403150 Opened 7 years ago Closed 7 years ago

Ignore the formatting on gHTMLElements

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

defect
Not set
normal

Tracking

(firefox58 fixed)

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

Details

Attachments

(1 file)

static const HTMLElement gHTMLElements[] = {
  ELEM(unknown,     ____, ____)
  ELEM(a,           ____, true)
Otherwise, we have:
-  ELEM(unknown,     ____, ____)
-  ELEM(a,           ____, true)
-  ELEM(abbr,        ____, true)
-  ELEM(acronym,     ____, true)
[...]
+  ELEM(unknown, ____, ____) ELEM(a, ____, true) ELEM(abbr, ____, true) ELEM(
+    acronym,
+    ____,
+    true) ELEM(address, true, true) ELEM(applet, ____, true)
+    ELEM(area, ____, ____) ELEM(article, true, true) ELEM(aside, true, true)
+      ELEM(audio, ____, true) ELEM(b, ____, true) ELEM(base, ____, ____) ELEM(
+        basefont,
+        ____,


Which isn't great :p
Comment on attachment 8912198 [details]
Bug 1403150 - Ignore the formatting on gHTMLElements

https://reviewboard.mozilla.org/r/183574/#review188750
Attachment #8912198 - Flags: review?(bugs) → review+
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b2f1c78e6971
Ignore the formatting on gHTMLElements r=smaug
another solution could be to add ";" as the end of the line.
It will tell clang-format that it is an expression by itself.
https://hg.mozilla.org/mozilla-central/rev/b2f1c78e6971
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Product: Core → Firefox Build System
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.