Bug 1403150 - Ignore the formatting on gHTMLElements r=smaug

MozReview-Commit-ID: FKHbmNBJjia