parser/htmlparser/nsElementTable.cpp
@@ -34,6 +34,7 @@ struct HTMLElement
 // values for the abovementioned tags at some point.
 //
 static const HTMLElement gHTMLElements[] = {
+  // clang-format off
   ELEM(unknown,     ____, ____)
   ELEM(a,           ____, true)
   ELEM(abbr,        ____, true)
@@ -180,6 +181,7 @@ static const HTMLElement gHTMLElements[] = {
   ELEM(markupDecl,  ____, true)
   ELEM(instruction, ____, true)
   ELEM(userdefined, ____, true)
+  // clang-format on
 };
 
 #undef ELEM
